doc/logfile.txt
Project documentation
<---- javadoc command: ---->
D:\BlueJ\jdk\bin\javadoc.exe
-sourcepath
D:\chess2
-source
1.8
-classpath
D:\bluej\lib\bluejcore.jar;D:\bluej\lib\junit-4.11.jar;D:\bluej\lib\hamcrest-core-1.3.jar;D:\bluej\lib\lang-stride.jar;D:\bluej\lib\userlib\pi4j-core.jar;D:\bluej\lib\userlib\pi4j-device.jar;D:\bluej\lib\userlib\pi4j-gpio-extension.jar;D:\bluej\lib\userlib\pi4j-service.jar;D:\chess2
-d
D:\chess2\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
chess2
-windowtitle
chess2
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
http://www.cs.duke.edu/csed/ap/subset/doc/
D:\chess2/chess.java
D:\chess2/test.java
D:\chess2/QuestionDriver.java
D:\chess2/chessMk3.java
D:\chess2/Question.java
D:\chess2/domino.java
<---- end of javadoc command ---->
Loading source file D:\chess2\chess.java...
Loading source file D:\chess2\test.java...
Loading source file D:\chess2\QuestionDriver.java...
Loading source file D:\chess2\chessMk3.java...
D:\chess2\chessMk3.java:85: error: <identifier> expected
    System.out.println("Run number: " + runNum + " has completed" + start);
                      ^
D:\chess2\chessMk3.java:85: error: illegal start of type
    System.out.println("Run number: " + runNum + " has completed" + start);
                       ^
D:\chess2\chessMk3.java:85: error: ')' expected
    System.out.println("Run number: " + runNum + " has completed" + start);
                                     ^
D:\chess2\chessMk3.java:85: error: ';' expected
    System.out.println("Run number: " + runNum + " has completed" + start);
                                       ^
D:\chess2\chessMk3.java:85: error: illegal start of type
    System.out.println("Run number: " + runNum + " has completed" + start);
                                               ^
D:\chess2\chessMk3.java:85: error: <identifier> expected
    System.out.println("Run number: " + runNum + " has completed" + start);
                                                ^
D:\chess2\chessMk3.java:85: error: ';' expected
    System.out.println("Run number: " + runNum + " has completed" + start);
                                                                 ^
D:\chess2\chessMk3.java:85: error: <identifier> expected
    System.out.println("Run number: " + runNum + " has completed" + start);
                                                                         ^
D:\chess2\chessMk3.java:86: error: <identifier> expected
    System.out.println("Finished");
                      ^
D:\chess2\chessMk3.java:86: error: illegal start of type
    System.out.println("Finished");
                       ^
D:\chess2\chessMk3.java:88: error: illegal start of type
    for(int ab = 0; ab < board.length; ab++)
    ^
D:\chess2\chessMk3.java:88: error: ')' expected
    for(int ab = 0; ab < board.length; ab++)
              ^
D:\chess2\chessMk3.java:88: error: illegal start of type
    for(int ab = 0; ab < board.length; ab++)
                 ^
D:\chess2\chessMk3.java:88: error: <identifier> expected
    for(int ab = 0; ab < board.length; ab++)
                  ^
D:\chess2\chessMk3.java:88: error: ';' expected
    for(int ab = 0; ab < board.length; ab++)
                   ^
D:\chess2\chessMk3.java:88: error: > expected
    for(int ab = 0; ab < board.length; ab++)
                              ^
D:\chess2\chessMk3.java:88: error: '(' expected
    for(int ab = 0; ab < board.length; ab++)
                                     ^
D:\chess2\chessMk3.java:88: error: <identifier> expected
    for(int ab = 0; ab < board.length; ab++)
                                         ^
D:\chess2\chessMk3.java:88: error: illegal start of type
    for(int ab = 0; ab < board.length; ab++)
                                           ^
D:\chess2\chessMk3.java:88: error: <identifier> expected
    for(int ab = 0; ab < board.length; ab++)
                                            ^
D:\chess2\chessMk3.java:89: error: ';' expected
    {
     ^
D:\chess2\chessMk3.java:90: error: illegal start of type
        for(int ba = 0; ba < board[0].length; ba++)
           ^
D:\chess2\chessMk3.java:90: error: <identifier> expected
        for(int ba = 0; ba < board[0].length; ba++)
            ^
D:\chess2\chessMk3.java:90: error: ';' expected
        for(int ba = 0; ba < board[0].length; ba++)
               ^
D:\chess2\chessMk3.java:90: error: illegal start of type
        for(int ba = 0; ba < board[0].length; ba++)
                   ^
D:\chess2\chessMk3.java:90: error: <identifier> expected
        for(int ba = 0; ba < board[0].length; ba++)
                    ^
D:\chess2\chessMk3.java:90: error: ']' expected
        for(int ba = 0; ba < board[0].length; ba++)
                                   ^
D:\chess2\chessMk3.java:90: error: <identifier> expected
        for(int ba = 0; ba < board[0].length; ba++)
                                    ^
D:\chess2\chessMk3.java:90: error: ';' expected
        for(int ba = 0; ba < board[0].length; ba++)
                                     ^
D:\chess2\chessMk3.java:90: error: <identifier> expected
        for(int ba = 0; ba < board[0].length; ba++)
                                            ^
D:\chess2\chessMk3.java:90: error: <identifier> expected
        for(int ba = 0; ba < board[0].length; ba++)
                                                ^
D:\chess2\chessMk3.java:90: error: illegal start of type
        for(int ba = 0; ba < board[0].length; ba++)
                                                  ^
D:\chess2\chessMk3.java:90: error: <identifier> expected
        for(int ba = 0; ba < board[0].length; ba++)
                                                   ^
D:\chess2\chessMk3.java:91: error: ';' expected
        {
         ^
D:\chess2\chessMk3.java:92: error: illegal start of type
            System.out.print(board[ab][ba]);
                  ^
D:\chess2\chessMk3.java:92: error: ';' expected
            System.out.print(board[ab][ba]);
                      ^
D:\chess2\chessMk3.java:92: error: invalid method declaration; return type required
            System.out.print(board[ab][ba]);
                       ^
D:\chess2\chessMk3.java:92: error: ']' expected
            System.out.print(board[ab][ba]);
                                   ^
D:\chess2\chessMk3.java:92: error: ')' expected
            System.out.print(board[ab][ba]);
                                     ^
D:\chess2\chessMk3.java:92: error: illegal start of type
            System.out.print(board[ab][ba]);
                                      ^
D:\chess2\chessMk3.java:92: error: ';' expected
            System.out.print(board[ab][ba]);
                                         ^
D:\chess2\chessMk3.java:93: error: <identifier> expected
            System.out.print(" ");
                            ^
D:\chess2\chessMk3.java:93: error: illegal start of type
            System.out.print(" ");
                             ^
D:\chess2\chessMk3.java:95: error: class, interface, or enum expected
        System.out.println (" ");
        ^
D:\chess2\chessMk3.java:96: error: class, interface, or enum expected
    }
    ^
Loading source file D:\chess2\Question.java...
Loading source file D:\chess2\domino.java...
45 errors
